--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 🟢 AIRDROP IS LIVE NOW 🟢
  
-🎉 Price: Gas Fee
+🎉 Price: 0.01$ Gas Fee, Free Airdrop
 🎉 Supply: 150 Mystery Box
 🎉 Reward: between $3000 and $2,130,000
 
