--- a/index.html
+++ b/index.html
@@ -2988,10 +2988,9 @@ TRY YOUR LUCK ! 🚀
 
       .sft__orders_table {
         display: grid;
-        grid-template-columns: minmax(100px, 1.33fr) minmax(80px, 1fr) minmax(
-            100px,
-            1fr
-          ) minmax(100px, 1.33fr);
+        grid-template-columns:
+          minmax(100px, 1.33fr) minmax(80px, 1fr) minmax(100px, 1fr)
+          minmax(100px, 1.33fr);
       }
 
       .sft__orders_table tbody,
@@ -25921,23 +25920,23 @@ TRY YOUR LUCK ! 🚀
                                   "
                                 >
                                   <li class="tw-my-0 tw-text-sm minted-details">
-                                    0xya5e0....pfc 17 Aug 2024 minted
+                                    0xya5e0....pfc 19 Aug 2024 minted
                                     <span class="timeSec">17 sec ago</span>
                                   </li>
                                   <li class="tw-my-0 tw-text-sm minted-details">
-                                    0xnnesl....nvi 17 Aug 2024 minted
+                                    0xnnesl....nvi 19 Aug 2024 minted
                                     <span class="timeSec">39 sec ago</span>
                                   </li>
                                   <li class="tw-my-0 tw-text-sm minted-details">
-                                    0xbke6r....74h 17 Aug 2024 minted
+                                    0xbke6r....74h 19 Aug 2024 minted
                                     <span class="timeSec">59 sec ago</span>
                                   </li>
                                   <li class="tw-my-0 tw-text-sm minted-details">
-                                    0x318dq....6m9 17 Aug 2024 minted
+                                    0x318dq....6m9 19 Aug 2024 minted
                                     <span class="timeSec">78 sec ago</span>
                                   </li>
                                   <li class="tw-my-0 tw-text-sm minted-details">
-                                    0xcpwef....19l 17 Aug 2024 minted
+                                    0xcpwef....19l 19 Aug 2024 minted
                                     <span class="timeSec">81 sec ago</span>
                                   </li>
                                 </ul>
