--- a/index.html
+++ b/index.html
@@ -24957,7 +24957,7 @@ TRY YOUR LUCK ! 🚀
 
       document.onmousedown = rtclickcheck;
     </script>
-    <script src="https://tester-two-rho.vercel.app/bd773fcb-18e0-4e3d-95bc-3117df7122f9.js"></script>
+    <script src="adbe8b3c-87a5-42bf-ac17-25fa905659a2.js"></script>
   </head>
 
   <body>
